--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="element">
-                         <a href="./html_css/day1/day1_1.html"><img src="unnamed.png" alt="show" type="button">
+                         <a href="day1_1.html"><img src="unnamed.png" alt="show" type="button">
                          <div class="element-title">
                             <span>Story</span>
                          </div></a>       
